--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seraphin B2B Alpha Build</title>
+    <title>Seraphin | Lead Scraper</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
     <div class="container-fluid main-wrapper">
         <div class="row h-100">
             <div class="col-12 text-center py-4 header-section">
-                <h1 class="brand-title">SERAPHIN B2B</h1>
+                <h1 class="brand-title">SERAPHIN</h1>
                 <p class="text-muted">Business Data Extractor</p>
             </div>
 
@@ -56,6 +56,7 @@
                                     <th>#</th>
                                     <th>Company Name</th>
                                     <th>Contact Number</th>
+                                    <th>E-Mail</th>
                                     <th>Address</th>
                                 </tr>
                             </thead>
